Fixed horizontal scrolling on small devices

--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -42,3 +42,11 @@
 .user-info{
   margin: 0 auto;
 }
+
+
+
+@media (max-width: 768px) {
+  body{
+    padding:15px;
+  }
+}
